objects/FieloEE__Section__c.object
<CustomObject>
    <description>Predetermined compartments that make up a page in the membersâ€™ portal. Components are placed in the sections.</description>
    <fields>
        <fullName>FieloEE__CSSClasses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSSClasses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Class__c</fullName>
        <formula>IF( ISNULL( FieloEE__Parent__c ) || FieloEE__Parent__c = &apos;&apos; , &apos;Parent&apos; , &apos;Sub section&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>FieloEE__Section__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Section</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>